# alpasim

./: .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  MAINTAINERS.md  README.md  SECURITY.md  setup_local_env.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: bugfix.md  feature.md
data/: README.md
data/scenes/: README.md
docs/: DATA_PIPELINE.md  DESIGN.md  ONBOARDING.md  OPERATIONS.md  TUTORIAL.md
src/controller/: README.md
src/eval/: README.md
src/eval/src/eval/: video.py
src/eval/src/eval/aggregation/: main.py
src/physics/tests/data/: README.md
src/runtime/: README.md
src/runtime/alpasim_runtime/replay_services/: README.md
src/runtime/notebooks/: README.md
src/runtime/tests/: README.md
src/utils/: README.md
src/utils/tests/data/no_map_artifact/: README.md
src/utils/tests/data/xodr_artifact/: README.md
src/wizard/: pyproject.toml
src/wizard/alpasim_wizard/scenes/: sceneset.py
